@@ -64,40 +64,6 @@ class Test(BaseTest):
         assert all(o["stream"] == "stdout" for o in output)
         assert all("windows" not in o["log"] for o in output)
 
-    def test_docker_logs_multiline(self):
-        """
-        Should be able to do multiline on docker logs.
-        """
-        self.render_config_template(
-            path=os.path.abspath(self.working_dir) + "/log/*",
-            json=dict(message_key="log", keys_under_root=True),
-            multiline=True,
-            pattern="^\[log\]",
-            match="after",
-            negate="true"
-        )
-
-        os.mkdir(self.working_dir + "/log/")
-        self.copy_files(["logs/docker_multiline.log"],
-                        target_dir="log")
-
-        proc = self.start_beat()
-        self.wait_until(
-            lambda: self.output_has(lines=3),
-            max_timeout=10)
-
-        proc.check_kill_and_wait()
-
-        output = self.read_output()
-        assert len(output) == 3
-
-        assert all("time" in o for o in output)
-        assert all("log" in o for o in output)
-        assert all("message" not in o for o in output)
-        assert all(o["stream"] == "stdout" for o in output)
-        assert output[1]["log"] == \
-            "[log] This one is\n on multiple\n lines"
-
     def test_simple_json_overwrite(self):
         """
         Should be able to overwrite keys when requested.
