@@ -105,6 +105,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 - Keep raw user agent information after parsing as user_agent_raw in Filebeat modules. {pull}7823[7832]
 - Make docker input check if container strings are empty {pull}7960[7960]
 - Add tag "truncated" to "log.flags" if incoming line is longer than configured limit. {pull}7991[7991]
+- Add tag "multiline" to "log.flags" if event consists of multiple lines. {pull}7997[7997]
 
 *Heartbeat*
 
